Prevent scrollbars from appearing with firefox

--- a/assets/css/netflow.css
+++ b/assets/css/netflow.css
@@ -4,6 +4,7 @@ html {
 body {
     background: linear-gradient(to bottom, rgba(242,246,248,1) 0%, rgba(216,225,231,1) 5%, rgba(181,198,208,1) 5%, rgba(224,239,249,1) 79%, rgba(245,251,255,1) 88%);
     height: 100%;
+    overflow:hidden;
 }
 
 
